refactor(java): avoid newer collection and pattern shortcuts